build: env separate for prod and dev

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,5 @@ FEISHU_APP_TOKEN=your_app_token_here
 # 飞书多维表格 ID
 FEISHU_TABLE_ID_TOPIC=your_topic_table_id_here
 FEISHU_TABLE_ID_TASK=your_task_table_id_here
+
+NEXT_PUBLIC_WEBHOOK_API_URL=http://localhost:5678/webhook-test/topic-helper
